--- a/src/style.scss
+++ b/src/style.scss
@@ -11,8 +11,8 @@
   --text-color: #8b949e;
   --link-color: #ffffff;
   --heading-color: #ffffff;
-  --border-color: #424242;
-  --header-bg: #121212;
+  --border-color: #2d2d2d;
+  --header-bg: #1c1b20;
   --block-bg: #1c1b20;
   --shadow-color: #fff1
 }
