useSpaces composable, cleanup/fixes (#1940)
* moved explore to useSpaces composable

* removed unused code

* fix bug on home page

* re-added useDomain in App.vue

* cleaned up useApp, moved everthing to useSpaces, adjusted components

* fixed useSkin

* added back borders

* fix skins

* fixed notifications hover

* style adjustments

* adjusted spacings in modals

* better load animation for spaces on home

* fix sidebar bug

* fade in for sidebar

* fixed sidebar bug

* linting

* adjusted rounding of space placeholder

* final hover effect for cards

* improved results display

* adjusted hover

--- a/src/style.scss
+++ b/src/style.scss
@@ -11,8 +11,8 @@
   --text-color: #8b949e;
   --link-color: #ffffff;
   --heading-color: #ffffff;
-  --border-color: #424242;
-  --header-bg: #121212;
+  --border-color: #2d2d2d;
+  --header-bg: #1c1b20;
   --block-bg: #1c1b20;
   --shadow-color: #fff1
 }
@@ -20,11 +20,11 @@
 [data-color-scheme='light'] {
   color-scheme: light;
   --primary-color: #384aff;
-  --bg-color: #f6f6f6;
+  --bg-color: #f8f8f8;
   --text-color: #57606a;
   --link-color: #444444;
   --heading-color: #111111;
-  --border-color: #d0d7de;
+  --border-color: #eee;
   --header-bg: white;
   --block-bg: white;
   --shadow-color: #0001
