--- a/src/style.scss
+++ b/src/style.scss
@@ -14,7 +14,7 @@
   --border-color: #2d2d2d;
   --header-bg: #1c1b20;
   --block-bg: #1c1b20;
-  --shadow-color: #fff1
+  --shadow-color: #fff1;
 }
 
 [data-color-scheme='light'] {
@@ -27,7 +27,7 @@
   --border-color: #eee;
   --header-bg: white;
   --block-bg: white;
-  --shadow-color: #0001
+  --shadow-color: #0001;
 }
 
 @layer base {
