--- a/src/style.scss
+++ b/src/style.scss
@@ -14,7 +14,7 @@
   --border-color: #2d2d2d;
   --header-bg: #1c1b20;
   --block-bg: #1c1b20;
-  --shadow-color: #fff1
+  --shadow-color: #fff1;
 }
 
 [data-color-scheme='light'] {
@@ -27,7 +27,7 @@
   --border-color: #eee;
   --header-bg: white;
   --block-bg: white;
-  --shadow-color: #0001
+  --shadow-color: #0001;
 }
 
 @layer base {
@@ -187,13 +187,13 @@ input[type='number'] {
   background-color: var(--text-color);
   color: var(--header-bg);
   border-radius: 7px;
-  font-size: 14px;
+  font-size: 16px;
   line-height: 1.4;
   outline: 0;
   transition-property: transform, visibility, opacity;
-  padding: 3px 6px 4px;
+  padding: 2px 4px;
   text-align: center;
-  font-weight: 600;
+  font-weight: 500;
 }
 .tippy-box[data-placement^='top'] > .tippy-arrow {
   bottom: 0;
