Fix loading background color across all loaders

--- a/src/style.scss
+++ b/src/style.scss
@@ -254,7 +254,7 @@ input[type='number'] {
 }
 
 .lazy-loading {
-  @apply bg-skin-text animate-pulse-fast;
+  @apply bg-skin-border animate-pulse-fast;
 }
 
 // Shot UI kit
