--- a/src/style.scss
+++ b/src/style.scss
@@ -24,7 +24,7 @@
   --text-color: #57606a;
   --link-color: #444444;
   --heading-color: #111111;
-  --border-color: #eee;
+  --border-color: #e0e0e0;
   --header-bg: white;
   --block-bg: white;
   --shadow-color: #0001;
