--- a/src/style.scss
+++ b/src/style.scss
@@ -13,20 +13,20 @@
   --heading-color: #ffffff;
   --border-color: #2d2d2d;
   --header-bg: #1c1b20;
-  --block-bg: #1c1b20;
+  --block-bg: transparent;
   --shadow-color: #fff1;
 }
 
 [data-color-scheme='light'] {
   color-scheme: light;
   --primary-color: #384aff;
-  --bg-color: #f8f8f8;
+  --bg-color: white;
   --text-color: #57606a;
   --link-color: #444444;
   --heading-color: #111111;
   --border-color: #e0e0e0;
   --header-bg: white;
-  --block-bg: white;
+  --block-bg: transparent;
   --shadow-color: #0001;
 }
 
@@ -141,11 +141,6 @@ textarea {
   padding-top: 16px;
   font-size: 20px;
   line-height: 1.4em;
-}
-
-// This seems to be needed for coin.scss skin, maybe it can be removed?
-.bg-black {
-  background-color: var(--bg-color);
 }
 
 .border,
