--- a/src/style.scss
+++ b/src/style.scss
@@ -145,6 +145,8 @@ textarea {
   line-height: 1.4em;
 }
 
+// TODO: Remove this and use border-skin-border in the templates. Tailwind has
+// dozens of modifiers (md:, sm:, hover: etc.) which would all need to be listed here.
 .border,
 .border-md,
 .border-lg,
