--- a/src/assets/fonts/iconfont.css
+++ b/src/assets/fonts/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: 'iconfont'; /* Project id 1946815 */
-  src: url('iconfont.woff2?t=1648382017037') format('woff2'),
-    url('iconfont.woff?t=1648382017037') format('woff'),
-    url('iconfont.ttf?t=1648382017037') format('truetype');
+  src: url('iconfont.woff2?t=1648383247623') format('woff2'),
+    url('iconfont.woff?t=1648383247623') format('woff'),
+    url('iconfont.ttf?t=1648383247623') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,10 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.iconnotificationsnone:before {
+  content: '\e708';
 }
 
 .iconearth:before {
