--- a/src/style.scss
+++ b/src/style.scss
@@ -167,6 +167,13 @@ input[type='number']::-webkit-outer-spin-button {
   margin: 0;
 }
 
+// Pointer cursor for file input buttons
+input[type=file], /* FF, IE7+, chrome (except button) */
+input[type=file]::-webkit-file-upload-button {
+  /* chromes and blink button */
+  cursor: pointer;
+}
+
 input[type='number'] {
   -moz-appearance: textfield;
 }
