--- a/src/style.scss
+++ b/src/style.scss
@@ -134,19 +134,12 @@ a,
 
 // TODO: Move this and ::placeholder to a new BaseInput component
 .input {
-  @apply outline-none text-skin-link bg-transparent border-none;
+  @apply outline-none text-skin-link bg-transparent;
 }
 
 ::placeholder {
   color: var(--text-color);
   opacity: 0.6 !important;
-}
-
-// TODO: Move this to a new BaseTextarea component
-textarea {
-  padding-top: 16px;
-  font-size: 20px;
-  line-height: 1.4em;
 }
 
 // TODO: Remove this and use border-skin-border in the templates. Tailwind has
@@ -172,6 +165,13 @@ input[type='number']::-webkit-inner-spin-button,
 input[type='number']::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
+}
+
+// Pointer cursor for file input buttons
+input[type=file], /* FF, IE7+, chrome (except button) */
+input[type=file]::-webkit-file-upload-button {
+  /* chromes and blink button */
+  cursor: pointer;
 }
 
 input[type='number'] {
@@ -263,7 +263,7 @@ input[type='number'] {
 // Shot UI kit
 
 .s-input {
-  @apply outline-none text-skin-heading border border-skin-border focus-within:border-skin-link block rounded-full py-2 px-3 w-full bg-skin-bg;
+  @apply outline-none text-skin-heading border border-skin-border focus-within:border-skin-text block rounded-full py-2 px-3 w-full bg-skin-bg;
 }
 
 .s-error {
@@ -277,7 +277,6 @@ input[type='number'] {
 .s-indicator {
   @apply text-sm h-[12px] w-[12px] rounded-full inline-block bg-blue;
 }
-
 
 // Fix for chrome. Overwrites tailwinds break-words class.
 // For some reason chrome doesn't break links with just overflow-wrap.
